# Phone-Camera

./: readme.md
C++/Linux/: CMakeLists.txt  PhoneCamera.cpp  PhoneCamera.h  example.py  mat_wrapper.cpp  mat_wrapper.h  pybind.cpp  readme.md  record_video.cpp
C++/Windows/: Windows.sln
C++/Windows/Core/: Core.vcxproj  Core.vcxproj.filters  PhoneCamera.cpp  PhoneCamera.h
C++/Windows/Example/: Example.vcxproj  Example.vcxproj.filters  record_video.cpp
Unity/Assets/Scenes/: Phone Camera.unity
Unity/Assets/Scripts/: Client.cs  Sensor.cs
Unity/ProjectSettings/: ProjectSettings.asset
